# lerni

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/wolkflows/: build.yml
.github/workflows/: build.yml
examples/: blur.rs  buttons.rs  grid.rs  hello_world.rs  logo-ng.svg-rs  logo.svg-rs  ng_blur.rs  ng_buttons.rs  ng_grid.rs  ng_hello_world.rs  ng_pointer.rs  ng_rows_cols.rs  ng_svg.rs  ng_text.rs  pointer.rs  rows_cols.rs  stack.rs  svg.rs  text.rs
scripts/: examples.sh
src/: cards.rs  frame.rs  into_strings.rs  legacy.rs  lib.rs  ng.rs  properties.rs  set.rs  text.rs  utils.rs  widgets.rs
src/components/: button.rs  mod.rs  text.rs
src/layout/: frame.rs  grid.rs  mod.rs  properties.rs  slide.rs  slideshow.rs
src/legacy/: utils.rs
src/legacy/properties/: align.rs  color.rs
src/legacy/widgets/: button.rs  label.rs  slide.rs  slideshow.rs  svg.rs  text.rs
src/ng/: button.rs  color.rs  column.rs  frame.rs  grid.rs  label.rs  row.rs  slide.rs  slideshow.rs  svg.rs  text.rs
src/properties/: align.rs  color.rs  flip.rs  mod.rs
src/widgets/: blur.rs  button.rs  column.rs  common.rs  grid.rs  image.rs  label.rs  label2.rs  mod.rs  row.rs  slide.rs  slide2.rs  slideshow.rs  space.rs  stack.rs  svg.rs  text.rs
