[package]
name = "lerni"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "Lerni content framework"
repository = "https://github.com/noviga/lerni"
include = ["src/**/*.rs", "examples/**/*.rs"]

[dependencies]
derive_more = "1.0"
getrandom = { version = "0.2", features = ["js"] }
gloo-events = "0.2"
gloo-utils = "0.2"
leptos = { version = "0.6", features = ["csr"] }
leptos-use = "0.11"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
yew = { version = "0.21", features = ["csr"], optional = true }
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "SvgElement",
    "TextMetrics",
]

[[example]]
name = "blur"
crate-type = ["cdylib"]

[[example]]
name = "buttons"
crate-type = ["cdylib"]

[[example]]
name = "grid"
crate-type = ["cdylib"]

[[example]]
name = "hello_world"
crate-type = ["cdylib"]

[[example]]
name = "rows_cols"
crate-type = ["cdylib"]

[[example]]
name = "stack"
crate-type = ["cdylib"]

[[example]]
name = "svg"
crate-type = ["cdylib"]

[[example]]
name = "text"
crate-type = ["cdylib"]

[features]
legacy = [
    "yew",
]
