[package]
name = "lerni"
version = "0.0.6"
edition = "2024"
license = "MIT"
description = "Lerni content framework"
repository = "https://github.com/noviga/lerni"
include = ["src/**/*.rs", "examples/**/*.rs"]

[dependencies]
derive_more = { version = "2.0", features = ["display"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-events = "0.2"
gloo-utils = "0.2"
leptos = { version = "0.8", features = ["csr"] }
leptos-use = "0.16"
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
wasm-bindgen = "0.2.105"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "SvgElement",
    "TextMetrics",
]

[[example]]
name = "blur"
crate-type = ["cdylib"]

[[example]]
name = "buttons"
crate-type = ["cdylib"]

[[example]]
name = "grid"
crate-type = ["cdylib"]

[[example]]
name = "hello_world"
crate-type = ["cdylib"]

[[example]]
name = "rows_cols"
crate-type = ["cdylib"]

[[example]]
name = "stack"
crate-type = ["cdylib"]

[[example]]
name = "svg"
crate-type = ["cdylib"]

[[example]]
name = "text"
crate-type = ["cdylib"]
