[package]
name = "lerni"
version = "0.0.6"
edition = "2024"
description = "Lerni content framework"
repository = "https://github.com/noviga/lerni"
license = "MIT"
include = ["examples/**/*.rs", "src/**/*.rs"]

[[example]]
crate-type = ["cdylib"]
name = "blur"

[[example]]
crate-type = ["cdylib"]
name = "buttons"

[[example]]
crate-type = ["cdylib"]
name = "grid"

[[example]]
crate-type = ["cdylib"]
name = "hello_world"

[[example]]
crate-type = ["cdylib"]
name = "rows_cols"

[[example]]
crate-type = ["cdylib"]
name = "stack"

[[example]]
crate-type = ["cdylib"]
name = "svg"

[[example]]
crate-type = ["cdylib"]
name = "text"

[dependencies]
derive_more = { version = "2.1", features = ["display"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
gloo-events = "0.3"
gloo-utils = "0.3"
leptos = { version = "0.8", features = ["csr"] }
leptos-use = "0.19"
rand = { version = "0.10", default-features = false, features = ["thread_rng"] }
wasm-bindgen = "0.2.126"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "SvgElement",
  "TextMetrics",
]
